Disable warning on third-party libraries

--- a/src/Makefile
+++ b/src/Makefile
@@ -70,9 +70,9 @@ ifeq "$(origin NOGUI)" "command line"
 endif
 
 ifdef PKCS11_INC
-	C_CXX_FLAGS += -I$(PKCS11_INC)
+	C_CXX_FLAGS += -isystem$(PKCS11_INC)
 else
-	C_CXX_FLAGS += -I$(CURDIR)/PKCS11
+	C_CXX_FLAGS += -isystem$(CURDIR)/PKCS11
 endif
 
 ifeq "$(origin RESOURCEDIR)" "command line"
